--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <h3>Let's learn to code, learn to be creative!</h3>
       </div>
       <span class="btn message">さっそく開発する</span>
+      <p>編集した試しです</p>
     </div>
   </div>
   <footer>
